# google-test-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CODEOWNERS  README.md  setup.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: classroom.yml
config/: Doxyfile.in
include/: base_test_fixture.h  csc232.h
include/testing/: base_test_fixture.h  main_page.h
src/main/cpp/: demo.cpp  main.cpp
src/test/cpp/: test_task1.cpp  test_task2.cpp  test_task3.cpp  test_task4.cpp  test_task5.cpp  unit_tests.cpp
